style.css
/* ... */
#contact-means > div {
  display: flex;
  gap: 3rem;
  align-items: center;
}

img#footer {
  width: 3440px;
  object-fit: none;
  height: 286px;
  margin-top: 24px;
}

.nav:hover {
  color: #1d4ed8; /* Tailwind's blue-700 */
}

.nav {
  padding-top: 0.5rem /* 12px */;
  padding-bottom: 0.5rem /* 12px */;
  padding-left: 0.75rem /* 64px */;
  padding-right: 0.75rem /* 64px */;
  color: var(--colorBrown800);
}

.section {
  width: 1296px;
  position: relative;
  z-index: 10;
  margin: 0 auto;
}

.sun {
  position: absolute;
  transform: translate(-25%, -50%);
  z-index: 0;
  transform-origin: center;
}

.stats-display {
  display: flex;
  flex-direction: column;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  justify-content: space-between;
  width: 526px;
}

.stats-display > div > p:nth-child(2) {
  color: #7a614f;
}

.mission {
  max-width: 1296px;
  margin-left: auto;
  margin-right: auto;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
}

.paragraphs {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.paragraphs-small {
  display: flex;
  flex-direction: column;
  padding-right: 8rem;
  flex: 1;
  self-align: center;
}

.paragraphs-small h2 {
  margin-bottom: 3.5rem;
}

.paragraphs-small div {
  margin-bottom: 2rem;
}

.gallery {
  display: grid;
  grid-template-columns: repeat(2, minmax(0, 1fr));
  gap: 3rem;
}

.gallery-item {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.button {
  display: inline-block; /* Ensure the button only takes up the space of the text and padding */
  background-color: white;
  color: black;
  border-radius: 9999px; /* Full rounded */
  padding-top: 0.75rem; /* 12px */
  padding-bottom: 0.75rem; /* 12px */
  padding-left: 3rem; /* 48px */
  padding-right: 3rem; /* 48px */
  text-align: center; /* Center the text inside the button */
  white-space: nowrap; /* Prevent text from wrapping */
}

.part {
  width: 526px;
}

.part-half {
  width: 648px;
}

/* Media Queries */
@media (max-width: 768px) {
  h2,
  h3 {
    text-align: center !important;
  }

  h2,
  h3 {
    margin-bottom: 2rem !important;
  }

  .title80 {
    font-size: var(--fontsizeTitle40);
    line-height: 48px;
  }

  .title64 {
    font-size: 40px;
    line-height: 48px;
  }

  .title56 {
    font-size: var(--fontsizeTitle40);
    line-height: 48px;
  }

  .title40 {
    font-size: 24px;
    line-height: 29px;
  }

  .title32 {
    font-size: 20px;
    line-height: 28px;
  }

  .title28 {
    font-size: 24px;
    line-height: 34px;
  }

  .paragraph20 {
    font-size: 18px;
    line-height: 32px;
    text-align: center;
  }

  .paragraph24 {
    font-size: 22px;
    line-height: 32px;
  }

  #hero {
    height: 640px;
  }

  #tagline {
    top: 177px;
    padding-left: 1rem;
    padding-right: 1rem;
  }

  #nav-items div {
    display: none;
  }

  #logo {
    left: 1rem;
  }

  #stats {
    display: flex;
    flex-direction: column;
    gap: 2rem;
    flex-wrap: nowrap;
  }

  #stats-countries {
    display: none;
  }

  #stats-facts {
    width: 100vw;
    display: flex;
    gap: 16px;
    overflow-x: auto;
    padding-right: 159px;
    scrollbar-width: none;
  }

  #stats-facts div[class*="title"] {
    display: inline-block;
  }

  #impact {
    flex-direction: column-reverse;
  }

  #impact-image {
    border-top-left-radius: 0px;
    border-bottom-left-radius: 0px;
    max-height: 312px;
  }

  #impact-statement {
    margin-top: 0;
    margin-bottom: 0;
    padding: 0 48px 0 48px;
    background-color: var(--colorBrown100);
    text-align: center;
  }

  #benefits {
    overflow-x: auto;
    scrollbar-width: none;
  }

  #benefits div {
    min-width: 264px;
    gap: 24px;
  }

  #benefits img {
    padding: 0;
  }

  #produce {
    flex-direction: column;
    gap: 48px;
  }

  #produce-portfolio {
    overflow-x: auto;
    scrollbar-width: none;
    display: flex;
    flex-direction: row;
    gap: 24px;
  }

  #produce-portfolio div {
    min-width: 264px;
    padding-left: 20px;
    padding-right: 20px;
  }

  #produce-portfolio img {
    padding: 0;
  }

  #mfarms-plus-content {
    flex-direction: column-reverse;
    gap: 48px;
  }

  #mfarms-plus-content .paragraphs {
    gap: 0;
  }

  #mfarms-plus-download {
    margin-top: 24px;
    flex-direction: column;
    gap: 16px;
  }

  #app {
    position: relative;
    display: flex;
    justify-content: center;
    max-height: 400px;
    top: 0;
    margin-top: 48px;
  }

  #about-us {
    flex-direction: column;
    gap: 24px;
  }

  #profiles {
    justify-content: center;
  }

  #profiles > div {
    max-width: 264px;
  }

  #contact > div {
    flex-direction: column;
    padding-right: 48px;
  }

  #contact-means {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 24px;
    margin-top: 24px;
  }

  #contact button {
    align-self: center;
  }

  #contact-means > div {
    flex-direction: column;
    gap: 8px;
  }

  #contact-means > div > div {
    flex-direction: column;
    text-align: center;
  }

  .stats-display {
    gap: 2rem;
    position: relative;
    width: 318.33px;
    flex: 0 0 auto;
  }

  .section {
    padding-left: 48px;
    padding-right: 48px;
    width: 100%;
  }

  .mission {
    flex-direction: column;
    padding: 0 48px 0 48px;
    text-align: center;
  }

  .sun {
    width: 450px;
    height: 450px;
    transform: translate(-15%, -50%);
  }

  .illustration {
    max-width: 312px;
    max-height: 312px;
  }

  .first-mission {
    flex-flow: column-reverse;
  }

  .part {
    width: 100%;
  }

  .paragraphs-small {
    padding-right: 0;
  }

  .paragraphs-small div {
    margin-bottom: 0;
  }
}
/* ... */

